# Fingerprint-verificaation-using-the-Fingerprint-Image

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
components/fp_system/: CMakeLists.txt  idf_component.yml
components/fp_system/include/: attendance.h  bt_serial.h  cmd_parser.h  fp_compare.h  fp_config.h  fp_debug.h  fp_driver.h  fp_storage.h
components/fp_system/src/: attendance.c  bt_serial.c  cmd_parser.c  fp_compare.c  fp_debug.c  fp_driver.c  fp_storage.c
main/: CMakeLists.txt  FP_Module.c  idf_component.yml
